# NIlang

./: AST.cpp  AST.h  CMakeLists.txt  Compiler.cpp  Compiler.h  ErrorListeners.cpp  ErrorListeners.h  NIVisitor.cpp  NIVisitor.h  README.md  main.cpp
autogen/: NILexer.cpp  NILexer.h  NILexer.interp  NILexer.tokens  NIParser.cpp  NIParser.h  NIParser.interp  NIParserBaseListener.cpp  NIParserBaseListener.h  NIParserBaseVisitor.cpp  NIParserBaseVisitor.h  NIParserListener.cpp  NIParserListener.h  NIParserVisitor.cpp  NIParserVisitor.h
examples/: arith_sum.ni  errors.ni  euclid.ni  fibonacci.ni  syntax_errors.ni  type_errors.ni
grammars/: NILexer.g4  NIParser.g4
